kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/WrongTypeName3.kt
package test

import java.util.*

public open class WrongTypeName3 {
    public open fun foo(p0 : String?) : String? = ""
}
